[package]
name = "file_endec"
version = "1.1.0"
description = "Secure file encryption and decryption from the command line."
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"
homepage = "https://github.com/mverleg/file_endec"
repository = "https://github.com/mverleg/file_endec"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["files", "encryption", "security"]

[lib]
name = "file_endec"
path = "src/lib.rs"

[features]
default = []
expose = []

[[bin]]
name = "fileenc"
path = "src/encrypt.rs"

[[bin]]
name = "filedec"
path = "src/decrypt.rs"

[[bench]]
name = "file_endec_bench"
path = "src/bench.rs"
harness = false

[dependencies]
# command line interaction
structopt = { version = "^0.3.20", default-features = false }
indicatif = "^0.15.0"

# encryption key
rpassword = "^5.0.0"
secstr = "^0.4.0"
zxcvbn = "^2.0.1"

# encyrption and decryption
twofish = "^0.5.0"
aes = "^0.6.0"
block-modes = "^0.7.0"

# hashing
ring = "^0.16.9"
argon2rs = "^0.2.5"
bcrypt = "^0.9.0"
twox-hash = "^1.6.0"

# headers
semver = "^0.11.0"
data-encoding = "^2.3.1"

# compression
brotli = "^3.3.0"

# shredding
file_shred = "^1.1.0"

# utilities
lazy_static = "^1.4.0"
rand = "^0.7.3"

[dev-dependencies]
criterion = "^0.3.3"
regex = "^1.4.2"
tempfile = "^3.1.0"
