[package]
name = "file_endec"
version = "1.1.0"
description = "Secure file encryption and decryption from the command line."
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"
homepage = "https://github.com/mverleg/file_endec"
repository = "https://github.com/mverleg/file_endec"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["files", "encryption", "security"]

build = "build.rs"

[lib]
name = "file_endec"
path = "src/lib.rs"

[features]
default = []
# Feature 'expose' exports more functions from the library, which is intended for
# integration testing and not part of semver api (i.e. not backwards compatible).
expose = []
# Feature 'test-e2e' enables some expensive end-to-end tests as part of unit tests.
test-e2e = []
# Feature 'dev-mode' adds debug information like timings. Not meant for those who are just using file_endec.
dev-mode = []
# Feature bin is used to strip executable-only dependencies when using file-endec as a library.
bin = ["jemallocator", "structopt", "indicatif"]

[[bin]]
name = "fileenc"
path = "src/encrypt.rs"
required-features = ["bin"]

[[bin]]
name = "filedec"
path = "src/decrypt.rs"
required-features = ["bin"]

[[bench]]
name = "file_endec_bench"
path = "src/bench.rs"
harness = false

[dependencies]
# command line interaction
structopt = { version = "0.3.26", default-features = false, optional = true }
indicatif = { version = "0.17.1", optional = true }

# encryption key
rpassword = "7.0.0"
secstr = "0.5.1"
zxcvbn = "2.2.1"

# encyrption and decryption
twofish = "0.7.1"
aes = "0.8.1"
block-modes = "0.9.1"

# hashing
ring = "0.16.20"
argon2rs = "0.2.5"
bcrypt = "0.13.0"
twox-hash = "1.6.3"

# headers
semver = "1.0.14"
data-encoding = "2.3.2"

# compression
brotli = "3.3.4"

# shredding
file_shred = "1.1.0"

# utilities
lazy_static = "1.4.0"
rand = "0.8.5"
number2name = "1.1.2"

[dev-dependencies]
criterion = "0.4.0"
regex = "1.6.0"
tempfile = "3.3.0"

[build-dependencies]
indoc = "1.0.7"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5.0", optional = true }

[profile.release]
lto = "thin"
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
